# server-nest/src/app.module.ts
@@ -14,6 +14,7 @@ import { RemindersModule } from "./modules/reminders/reminders.module";
 import { BillingModule } from "./modules/billing/billing.module";
 import { DashboardModule } from "./modules/dashboard/dashboard.module";
 import { TemplatesModule } from "./modules/templates/templates.module";
+import { FirmModule } from "./modules/firm/firm.module";
 import { NotificationsModule } from "./modules/notifications/notifications.module";
 
 @Global()
@@ -45,6 +46,7 @@ class PrismaModule {}
     BillingModule,
     DashboardModule,
     TemplatesModule,
+    FirmModule,
     NotificationsModule,
   ],
   controllers: [HealthController],
